# classic_rag_pipeline

./: README.md  main.py  pyproject.toml
data/texts/: another_example.txt  example.txt
notebook/: document.ipynb
